# MDToolkit

./: .gitignore  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  SETUP_COMPLETE.md  STRUCTURE.md  environment.yml  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
docs/: conf.py  index.rst
mdtoolkit/: __init__.py
mdtoolkit/channel/: __init__.py  hole_analysis.py
mdtoolkit/core/: __init__.py  selections.py  trajectory.py  utils.py
mdtoolkit/dynamics/: __init__.py  correlation.py  covariance.py  pca.py
mdtoolkit/free_energy/: __init__.py  bar_analysis.py  fep_analysis.py  pmf_analysis.py  ti_analysis.py
mdtoolkit/structure/: __init__.py  contacts.py  distances.py  geometry.py  rmsd.py  sasa.py
mdtoolkit/visualization/: __init__.py  colors.py  plot_templates.py  plots.py
mdtoolkit/workflows/: __init__.py  binding_analysis.py  standard_analysis.py
notebooks/: 01_integrated_analysis_workflow.ipynb
scripts/: quick_analysis.py
tests/: conftest.py  test_dynamics.py  test_structure.py
tests/test_channel/: __init__.py  test_hole.py
tests/test_free_energy/: __init__.py  test_bar.py  test_fep.py  test_pmf.py  test_ti.py
